fixed header links on mobile

--- a/style-game.css
+++ b/style-game.css
@@ -66,7 +66,8 @@ header nav {
 }
 header .links a, button {
     font-family: WyliFont, "Comic Sans MS", "Comic Sans", cursive;
-    font-size: max(16px, var(--spacer_vw_quarter));
+    /* font-size: max(16px, var(--spacer_vw_quarter)); //don't do this, it's messed up on mobile*/
+    font-size: var(--spacer_vw_quarter);
     text-decoration: none;
 }
 header .logo-text {
